test: fix it environment

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -17,6 +17,12 @@ jobs:
     services:
       postgres:
         image: postgres:14
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: ${{ env.TEST_DBNAME }}
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
